<resources>
    <string name="app_name">Подписка</string>

    <string name="username">Имя пользователя</string>
    <string name="email">Электронная почта</string>
    <string name="enterName">Введите имя</string>
    <string name="enterEmail">Введите электронную почту</string>

    <string name="btnClear">Очистить</string>

    <string name="ClickOnOk">Подписка на рассылку успешно оформлена для пользователя </string>
    <string name="ClickOnOk2"> на электронный адрес </string>
</resources>
